# notebooklm-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  test_rpc.py
mcp_notebooklm/: __init__.py  server.py
